# cadiaplayer-prolog-engine

./: ._Makefile.am  ._configure.ac  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  start_perf_test.sh  start_sample_perf_test.sh
agent/: ._Makefile.am  ._agent.cpp  ._agent.h  ._cadiaplayer.cpp  ._gmprotocol.cpp  ._gmprotocol.h  Makefile.am  Makefile.in  agent.cpp  agent.h  cadiaplayer.cpp  gmprotocol.cpp  gmprotocol.h
logic/: ._breakthroughcontroller.cpp  ._breakthroughcontroller.h  ._eclipsecontroller.cpp  ._eclipsecontroller.h  ._gamecontroller.cpp  ._gamecontroller.h  ._prologcontroller.cpp  ._prologcontroller.h  ._prologutils.h  breakthroughcontroller.cpp  breakthroughcontroller.h  eclipsecontroller.cpp  eclipsecontroller.h  gamecontroller.cpp  gamecontroller.h  prologcontroller.cpp  prologcontroller.h  prologutils.h
logic/games/: ._breakthrough.cpp  ._breakthrough.h  breakthrough.cpp  breakthrough.h
logic/utils/: ._domainanalyzer.cpp  ._domainanalyzer.h  ._smove.h  ._sstate.cpp  ._sstate.h  ._sterm.cpp  ._sterm.h  domainanalyzer.cpp  domainanalyzer.h  smove.h  smovetable.h  sstate.cpp  sstate.h  sterm.cpp  sterm.h
play/: ._gametheory.cpp  ._gametheory.h  ._move.cpp  ._move.h  gametheory.cpp  gametheory.h  move.cpp  move.h
play/heuristic/: ._heuristic.h  heuristic.h
play/kits/: ._goalstabilitykit.cpp  ._goalstabilitykit.h  ._tilingplayerkit.cpp  ._tilingplayerkit.h  goalstabilitykit.cpp  goalstabilitykit.h  tilingplayerkit.cpp  tilingplayerkit.h
play/parsing/: ._compound.cpp  ._gameparser.cpp  ._gameparser.h  ._symtab.cpp  ._symtab.h  ._tplex.l  ._variable.cpp  Makefile.am  Makefile.in  compound.cpp  compound.h  gameparser.cpp  gameparser.h  symtab.cpp  symtab.h  token.h  tplex.l  variable.cpp  variable.h
play/players/: ._fastmastplayer.cpp  ._fastmastplayer.h  ._fastmastraveplayer.cpp  ._fastmastraveplayer.h  ._fastpastplayer.cpp  ._fastpastplayer.h  ._fastpastraveplayer.cpp  ._fastpastraveplayer.h  ._fastplayer.cpp  ._fastplayer.h  ._fastraveplayer.cpp  ._fastraveplayer.h  ._fasttomastplayer.cpp  ._fasttomastplayer.h  ._fasttomastraveplayer.cpp  ._fasttomastraveplayer.h  ._gameplayer.h  ._mastplayer.cpp  ._mastplayer.h  ._mastraveplayer.cpp  ._mastraveplayer.h  ._mcmemoryplayer.cpp  ._mcmemoryplayer.h  ._mcplayer.cpp  ._mcplayer.h  ._pastplayer.cpp  ._pastplayer.h  ._pastraveplayer.cpp  ._pastraveplayer.h  ._randomplayer.cpp  ._randomplayer.h  ._selectionplayer.cpp  ._selectionplayer.h  ._tomastplayer.cpp  ._tomastplayer.h  ._tomastraveplayer.cpp  ._tomastraveplayer.h  ._uctplayer.cpp  ._uctplayer.h  ._uctraveplayer.cpp  (+50 more)
play/shmemutils/: ._shincupdmap.cpp  ._shkeymap.cpp  ._shkeymap.h  shincupdmap.cpp  shincupdmap.h  shkeymap.cpp  shkeymap.h
play/tiling/: ._compoundmultivaluetiling.cpp  ._compoundmultivaluetiling.h  ._compoundtiling.cpp  ._compoundtiling.h  ._compoundvaluetiling.cpp  ._compoundvaluetiling.h  ._piecevaluetiling.cpp  ._piecevaluetiling.h  ._rolepiecetiling.cpp  ._rolepiecetiling.h  ._tilecoding.cpp  ._tilecoding.h  ._tilecodinglearner.cpp  ._tilecodinglearner.h  ._tiling.h  ._tilings.h  ._valuetiling.cpp  ._valuetiling.h  compoundmultivaluetiling.cpp  compoundmultivaluetiling.h  compoundtiling.cpp  compoundtiling.h  compoundvaluetiling.cpp  compoundvaluetiling.h  piecevaluetiling.cpp  piecevaluetiling.h  rolepiecetiling.cpp  rolepiecetiling.h  tilecoding.cpp  tilecoding.h  tilecodinglearner.cpp  tilecodinglearner.h  tiling.h  tilings.h  valuetiling.cpp  valuetiling.h
play/utils/: ._binaryrelation.cpp  ._binaryrelation.h  ._episode.cpp  ._episode.h  ._gamestatespace.cpp  ._gamestatespace.h  ._gt_log.cpp  ._movepredicatefeature.cpp  ._movepredicatefeature.h  ._movetrails.cpp  ._movetrails.h  ._multistack.cpp  ._multistack.h  ._multistate.cpp  ._multistate.h  ._multitree.cpp  ._multitree.h  ._relationcounter.cpp  ._relationcounter.h  binaryrelation.cpp  binaryrelation.h  episode.cpp  episode.h  gamestatespace.cpp  gamestatespace.h  gt_file.cpp  gt_file.h  gt_log.cpp  gt_log.h  gtv_data.h  movepredicatefeature.cpp  movepredicatefeature.h  movetrails.cpp  movetrails.h  multistack.cpp  multistack.h  multistate.cpp  multistate.h  multitree.cpp  multitree.h  (+2 more)
scripts/: ._Makefile.am  ._cadiaplayer.ini  ._ggp.extensions.pl  ._kif2ggp  ._run_fastmastslaves  ._run_ggp_client  ._run_ggp_fastmastslave  ._run_ggp_mastslave  ._run_ggp_slave  ._run_mastslaves  ._run_slaves  Makefile.am  Makefile.in  cadiaplayer.ini  client.kif  ggp.extensions.pl  kif2ggp  run_clients  run_fastmastslaves  run_ggp_client  run_ggp_fastmastslave  run_ggp_mastslave  run_ggp_slave  run_mastslaves  run_slaves  slavegame.kif
scripts/prolog/: cadia_connector.ecl  game_description.ecl  gdl_parser.ecl  logger.ecl  main.ecl
server/: ._externalserver.cpp  ._ggpserver.cpp  ._server.cpp  ._server.h  Makefile.am  Makefile.in  externalserver.cpp  ggpserver.cpp  server.cpp  server.h
utils/: ._childprocess.cpp  ._childprocess.h  ._kif2pl.cpp  ._settings.cpp  ._settings.h  ._statistics.cpp  ._statistics.h  ._strutils.h  ._tcpserver.cpp  ._tcpserver.h  ._timer.h  ._worker.cpp  ._worker.h  Makefile.am  Makefile.in  childprocess.cpp  childprocess.h  fdstream.h  kif2pl.cpp  logger.cpp  logger.h  longlonghash.h  settings.cpp  settings.h  statistics.cpp  statistics.h  streamutils.h  stringhash.h  strutils.h  tcpserver.cpp  tcpserver.h  timer.h  worker.cpp  worker.h
